codama-macros/tests/codama_attribute/pda_directive/missing_name.fail.rs
use codama_macros::codama;

#[codama(pda)]
pub struct Test;

#[codama(pda())]
pub struct TestWithBraces;

fn main() {}
